--- a/python_lab_tasks.ipynb
+++ b/python_lab_tasks.ipynb
@@ -3,9 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyP99SrRitLl8MBjdJ06pmes",
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -16,16 +14,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Priyadharshini411/Priyadharshini411/blob/main/python_lab_tasks.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "execution_count": null,
@@ -67,7 +55,7 @@
         "id": "_XbH3TCmfNjt",
         "outputId": "4d4debb5-4437-47ad-e57a-8795cd28e1b6"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -134,7 +122,7 @@
         "id": "0Hg5tfC8f0_Q",
         "outputId": "b3de5663-c697-470b-c854-3b519abf7091"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -196,7 +184,7 @@
         "id": "b3DYkcqlf3sA",
         "outputId": "5ced7cca-fc32-4cc6-b567-cbc180ea4116"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -248,7 +236,7 @@
         "id": "L2i1pTxngB9t",
         "outputId": "ece250d4-a514-436b-83e8-f393b3681ddd"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
